	DESCRIPTION metadata, using new code from package tools which is
	also used by R CMD check.

    o	list_files_with_exts (package tools) now handles zipped directories.

    o	Package 'tools' now provides Rd_parse(), a simple top-level
	parser/analyzer for R documentation format.

    o	massage-Examples.pl now attempts to unload any namespaces
	loaded by the example.


C-LEVEL FACILITIES

    o	The PACKAGE argument for .C/.Call/.Fortran/.External can be
	omitted if the call is within code within a package with a
	namespace.  This ensures that the native routine being called
	is found in the DLL of the correct version of the package if
	multiple versions of a package are loaded in the R session.
	Using a namespace and omitting the PACKAGE argument is
	currently the only way to ensure that the correct version is
	used.

    o	The header Rmath.h contains a definition for R_VERSION_STRING
	which can be used to track different versions of R and libRmath.

    o	The Makefile in src/nmath/standalone now has 'install' and
	'uninstall' targets -- see the README file in that directory.

    o	More of the header files, including Rinternals.h, Rdefines.h and
	Rversion.h, are now suitable for calling directly from C++.


DEPRECATED & DEFUNCT

    o	Direct use of R INSTALL|REMOVE|BATCH|COMPILE|SHLIB has been
	removed: use R CMD instead.

    o	La.eigen(), tetragamma(), pentagamma(), package.contents() and
	package.description() are defunct.

    o	The undocumented function newestVersion() is no longer exported
	from package utils.  (Mainly because it was not completely general.)

    o	If --enable-R-shlib is specified, a copy of libR is still
	installed in $R_HOME/bin, but this will be removed in the near
	future.	 Use that in R_HOME/lib instead.

    o	C-level entry point ptr_R_GetX11Image has been removed, as it
	was replaced by R_GetX11Image at 1.7.0.

    o	The undocumented C-level entry point R_IsNaNorNA has been
	removed.  It was used in a couple of packages, and should be